Rename package: [OpenTelemetry.Contrib.Instrumentation.AWS] to [OpenTelemetry.Instrumentation.AWS] (#1275)

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -6,9 +6,6 @@ components:
   src/OpenTelemetry.Contrib.Extensions.AWSXRay/:
     - srprash
     - atshaw43
-  src/OpenTelemetry.Contrib.Instrumentation.AWS/:
-    - srprash
-    - atshaw43
   src/OpenTelemetry.Exporter.Geneva/:
     - cijothomas
     - codeblanch
@@ -28,10 +25,9 @@ components:
     - codeblanch
   src/OpenTelemetry.Extensions.Enrichment/:
     - xakep139
-  src/OpenTelemetry.PersistentStorage.Abstractions/:
-    - vishweshbankwar
-  src/OpenTelemetry.PersistentStorage.FileSystem/:
-    - vishweshbankwar
+  src/OpenTelemetry.Instrumentation.AWS/:
+    - srprash
+    - atshaw43
   src/OpenTelemetry.Instrumentation.AWSLambda/:
     - rypdal
     - Oberon00
@@ -59,6 +55,10 @@ components:
     - xiang17
   src/OpenTelemetry.Instrumentation.Wcf/:
     - codeblanch
+  src/OpenTelemetry.PersistentStorage.Abstractions/:
+    - vishweshbankwar
+  src/OpenTelemetry.PersistentStorage.FileSystem/:
+    - vishweshbankwar
   src/OpenTelemetry.ResourceDetectors.AWS/:
     - srprash
     - atshaw43
@@ -71,9 +71,6 @@ components:
     - srprash
     - atshaw43
   test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
-    - srprash
-    - atshaw43
-  test/OpenTelemetry.Contrib.Instrumentation.AWS.Tests/:
     - srprash
     - atshaw43
   test/OpenTelemetry.Exporter.Geneva.Benchmark/:
@@ -110,8 +107,9 @@ components:
     - codeblanch
   test/OpenTelemetry.Extensions.Enrichment.Tests/:
     - xakep139
-  test/OpenTelemetry.PersistentStorage.FileSystem.Tests/:
-    - vishweshbankwar
+  test/OpenTelemetry.Instrumentation.AWS.Tests/:
+    - srprash
+    - atshaw43
   test/OpenTelemetry.Instrumentation.AWSLambda.Tests/:
     - rypdal
     - Oberon00
@@ -137,6 +135,8 @@ components:
     - xiang17
   test/OpenTelemetry.Instrumentation.Wcf.Tests/:
     - codeblanch
+  test/OpenTelemetry.PersistentStorage.FileSystem.Tests/:
+    - vishweshbankwar
   test/OpenTelemetry.ResourceDetectors.AWS.Tests/:
     - srprash
     - atshaw43
