--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
       matrix:
         os: [ windows-latest, ubuntu-latest ]
-        version: [ net462, netcoreapp3.1, net6.0, net7.0 ]
+        version: [ net462, net6.0, net7.0 ]
         exclude:
         - os: ubuntu-latest
           version: net462
@@ -25,11 +25,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
-
-    - name: Install .NET 3.1 SDK
-      uses: actions/setup-dotnet@v3.2.0
-      with:
-        dotnet-version: '3.1.x'
 
     - name: Install .NET 7 SDK
       uses: actions/setup-dotnet@v3.2.0
