--- a/src/OpenTelemetry.Instrumentation.AWS/OpenTelemetry.Instrumentation.AWS.csproj
+++ b/src/OpenTelemetry.Instrumentation.AWS/OpenTelemetry.Instrumentation.AWS.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="AWSSDK.Core" Version="3.5.1.24" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.5.0.27" />
     <PackageReference Include="AWSSDK.SQS" Version="3.5.0.26" />
-    <PackageReference Include="OpenTelemetry.Contrib.Extensions.AWSXRay" Version="1.0.1" />
+    <PackageReference Include="OpenTelemetry.Extensions.AWS" Version="1.3.0-beta.1" />
   </ItemGroup>
 
   <ItemGroup>
