--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Read publish AOT testApp output and assert warning count
+    - name: publish AOT testApp, assert static analysis warning count and exit code
       shell: pwsh
-      run: .\build\assert-publish-aot-testApp-warning-count.ps1
+      run: .\build\test-aot-compatibility.ps1
 
