--- a/.github/workflows/dotnet-core-cov.yml
+++ b/.github/workflows/dotnet-core-cov.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup .NET 7.0
       uses: actions/setup-dotnet@v3.2.0
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.306'
 
     - name: Install dependencies
       run: dotnet restore
