--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install .NET 7 SDK
       uses: actions/setup-dotnet@v3.2.0
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.306'
 
     - name: Install format tool
       run: dotnet tool install -g dotnet-format
