--- a/.github/workflows/package-Instrumentation.Cassandra.yml
+++ b/.github/workflows/package-Instrumentation.Cassandra.yml
@@ -28,7 +28,7 @@ jobs:
 
     - uses: actions/setup-dotnet@v3.2.0
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.306'
 
     - name: Install dependencies
       run: dotnet restore src/${{env.PROJECT}}
@@ -57,7 +57,7 @@ jobs:
       run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --verify-tag --notes "See [CHANGELOG](https://github.com/open-telemetry/opentelemetry-dotnet-contrib/blob/${{ github.ref_name }}/src/${{env.PROJECT}}/CHANGELOG.md) for details." --prerelease
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
+
     - name: Create GitHub Release
       if: ${{ !(contains(github.ref_name, '-alpha.') || contains(github.ref_name, '-beta.') || contains(github.ref_name, '-rc.')) }}
       run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --verify-tag --notes "See [CHANGELOG](https://github.com/open-telemetry/opentelemetry-dotnet-contrib/blob/${{ github.ref_name }}/src/${{env.PROJECT}}/CHANGELOG.md) for details." --latest
