--- a/.github/workflows/package-Instrumentation.EntityFrameworkCore.yml
+++ b/.github/workflows/package-Instrumentation.EntityFrameworkCore.yml
@@ -30,7 +30,7 @@ jobs:
 
     - uses: actions/setup-dotnet@v3.2.0
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.306'
 
     - name: Install dependencies
       run: dotnet restore src/${{env.PROJECT}}
