--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install .NET 7 SDK
-      uses: actions/setup-dotnet@v3.2.0
-      with:
-        dotnet-version: '7.0.x'
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
 
     - name: Install dependencies
       run: dotnet restore
