--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -20,10 +20,8 @@ jobs:
     - name: check out code
       uses: actions/checkout@v3
 
-    - name: Install .NET 7 SDK
-      uses: actions/setup-dotnet@v3.2.0
-      with:
-        dotnet-version: '7.0.x'
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
 
     - name: Install format tool
       run: dotnet tool install -g dotnet-format
