--- a/.github/workflows/package-Instrumentation.Cassandra.yml
+++ b/.github/workflows/package-Instrumentation.Cassandra.yml
@@ -26,9 +26,8 @@ jobs:
       with:
         fetch-depth: 0 # fetching all
 
-    - uses: actions/setup-dotnet@v3.2.0
-      with:
-        dotnet-version: '7.0.x'
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
 
     - name: Install dependencies
       run: dotnet restore src/${{env.PROJECT}}
