--- a/.github/workflows/package-Instrumentation.StackExchangeRedis.yml
+++ b/.github/workflows/package-Instrumentation.StackExchangeRedis.yml
@@ -1,4 +1,4 @@
-name: Pack OpenTelemetry.Instrumentation.StackExchangeRedis
+Profilername: Pack OpenTelemetry.Instrumentation.StackExchangeRedis
 
 on:
   workflow_dispatch:
@@ -28,9 +28,8 @@ jobs:
       with:
         fetch-depth: 0 # fetching all
 
-    - uses: actions/setup-dotnet@v3.2.0
-      with:
-        dotnet-version: '7.0.x'
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
 
     - name: Install dependencies
       run: dotnet restore src/${{env.PROJECT}}
