--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -5,10 +5,12 @@ on:
     branches: [ 'main*' ]
     paths:
     - 'src/OpenTelemetry.Instrumentation.Runtime/**'
+    - '!src/OpenTelemetry.Instrumentation.Runtime/README.md'
   pull_request:
     branches: [ 'main*' ]
     paths:
     - 'src/OpenTelemetry.Instrumentation.Runtime/**'
+    - '!src/OpenTelemetry.Instrumentation.Runtime/README.md'
 
 jobs:
   aot-test:
