--- a/.github/workflows/package-Instrumentation.StackExchangeRedis.yml
+++ b/.github/workflows/package-Instrumentation.StackExchangeRedis.yml
@@ -1,4 +1,4 @@
-Profilername: Pack OpenTelemetry.Instrumentation.StackExchangeRedis
+name: Pack OpenTelemetry.Instrumentation.StackExchangeRedis
 
 on:
   workflow_dispatch:
