--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -26,5 +26,5 @@ jobs:
 
     - name: publish AOT testApp, assert static analysis warning count, and run the app
       shell: pwsh
-      run: .\build\test-aot-compatibility.ps1 ${{ matrix.version }}
+      run: .\build\test-aot-compatibility.ps1 7.0.400
 
