OpenTelemetry.Exporter.InfluxDB nullable support

--- a/src/OpenTelemetry.Exporter.InfluxDB/OpenTelemetry.Exporter.InfluxDB.csproj
+++ b/src/OpenTelemetry.Exporter.InfluxDB/OpenTelemetry.Exporter.InfluxDB.csproj
@@ -9,6 +9,7 @@
     <MinVerTagPrefix>Exporter.InfluxDB-</MinVerTagPrefix>
     <EnableAnalysis>true</EnableAnalysis>
     <IncludeSharedExceptionExtensionsSource>true</IncludeSharedExceptionExtensionsSource>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
