Add EventCounters to AotCompatibility.Test (#1322)

--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -6,11 +6,15 @@ on:
     paths:
     - 'src/OpenTelemetry.Instrumentation.Runtime/**'
     - '!src/OpenTelemetry.Instrumentation.Runtime/README.md'
+    - 'src/OpenTelemetry.Instrumentation.EventCounters/**'
+    - '!src/OpenTelemetry.Instrumentation.EventCounters/README.md'
   pull_request:
     branches: [ 'main*' ]
     paths:
     - 'src/OpenTelemetry.Instrumentation.Runtime/**'
     - '!src/OpenTelemetry.Instrumentation.Runtime/README.md'
+    - 'src/OpenTelemetry.Instrumentation.EventCounters/**'
+    - '!src/OpenTelemetry.Instrumentation.EventCounters/README.md'
 
 jobs:
   aot-test:
