--- a/.github/workflows/ci-Instrumentation.Process.yml
+++ b/.github/workflows/ci-Instrumentation.Process.yml
@@ -1,33 +1,43 @@
-name: Instrumentation.Process
+name: Build OpenTelemetry.Instrumentation.Process
 
 on:
-  pull_request:
-    branches: [ 'main*' ]
+  push:
+    branches: [ 'main*', 'instrumentation*' ]
     paths:
-    - 'src/OpenTelemetry.Instrumentation.Process/**'
-    - 'test/OpenTelemetry.Instrumentation.Process.Tests/**'
+    - '*/OpenTelemetry.Instrumentation.Process*/**'
+    - 'build/**'
+    - '!**.md'
+  pull_request:
+    branches: [ 'main*', 'instrumentation*' ]
+    paths:
+    - '*/OpenTelemetry.Instrumentation.Process*/**'
+    - 'build/**'
+    - '!**.md'
 
 env:
-  COMPONENT_NAME: OpenTelemetry.Instrumentation.Process
+  PROJECT: OpenTelemetry.Instrumentation.Process
 
 jobs:
-  unit-test:
+  build-test:
+
     strategy:
       fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ windows-latest, ubuntu-latest ]
+        version: [ net462, net6.0, net7.0 ]
+        exclude:
+        - os: ubuntu-latest
+          version: net462
 
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install .NET 7 SDK
-      uses: actions/setup-dotnet@v3.2.0
-      with:
-        dotnet-version: '7.0.x'
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
 
-    - name: Build
-      run: dotnet build --configuration Release test/${{ env.COMPONENT_NAME }}.Tests/${{ env.COMPONENT_NAME }}.Tests.csproj
+    - name: dotnet build test/${{ env.PROJECT }}.Tests
+      run: dotnet build --configuration Release test/${{ env.PROJECT }}.Tests/${{ env.PROJECT }}.Tests.csproj
 
-    - name: Test
-      run: dotnet test test/${{ env.COMPONENT_NAME }}.Tests/bin/Release/**/${{ env.COMPONENT_NAME }}.Tests.dll --logger:"console;verbosity=detailed"
+    - name: dotnet test test/${{ env.PROJECT }}.Tests
+      run: dotnet test test/${{ env.PROJECT }}.Tests/bin/Release/**/${{ env.PROJECT }}.Tests.dll --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed"
