--- a/.github/workflows/ci-Exporter.OneCollector.yml
+++ b/.github/workflows/ci-Exporter.OneCollector.yml
@@ -53,5 +53,5 @@ jobs:
       with:
         file: TestResults/Cobertura.xml
         env_vars: OS,TFM
-        flags: Exporter.OneCollector.unittests
+        flags: unittests-Exporter.OneCollector
         name: Code Coverage for Exporter.OneCollector on [${{ matrix.os }}.${{ matrix.version }}]
