--- a/.github/workflows/dotnet-core-cov.yml
+++ b/.github/workflows/dotnet-core-cov.yml
@@ -42,7 +42,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Test ${{ matrix.version }}
-      run: dotnet test **/bin/Release/${{ matrix.version }}/*.Tests.dll --collect:"Code Coverage" --results-directory:"TestResults" --framework ${{ matrix.version }} --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
+      shell: pwsh
+      run: ForEach ($project in (Get-ChildItem -Path test/*.Tests/*.csproj -File)) { dotnet test $project.FullName --collect:"Code Coverage" --results-directory:"TestResults" --framework ${{ matrix.version }} --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true }
 
     - name: Install coverage tool
       run: dotnet tool install -g dotnet-coverage
